--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     font-weight: 400;
     font-style: normal;
     overflow: hidden;
+    height: -webkit-fill-available;
     /* cursor: none; */
 }
 
