--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Micro+5&display=swap");
 
 body {
+    position: fixed;
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -8,8 +9,6 @@ body {
     font-weight: 400;
     font-style: normal;
     overflow: hidden;
-    height: -webkit-fill-available;
-    /* cursor: none; */
 }
 
 main {
@@ -23,17 +22,24 @@ main {
     align-items: center;
     position: relative;
     width: 100%;
-    /* height: auto; */
     padding: 2rem 0rem;
     overflow: hidden;
-    gap: 2rem;
+    gap: 0.8rem;
 }
 
 .delete-memorial__title {
+    padding: 0 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
     width: 100%;
     color: black;
     font-size: 5rem;
     text-align: center;
+    margin: 0;
 }
 
 .delete-memorial__field {
@@ -42,6 +48,11 @@ main {
     border-color: black;
     border-width: 0.3rem;
     max-width: 500px;
+}
+
+p {
+    margin: 0.2rem 0;
+    /* font-size: 1.2rem; */
 }
 
 .delete-memorial__excavator {
