--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   font-family: "Micro 5", sans-serif;
   font-weight: 400;
   font-style: normal;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 main {
