--- a/style.css
+++ b/style.css
@@ -95,13 +95,14 @@ p {
   font-family: "Micro 5", sans-serif;
   font-weight: 400;
   font-size: 2rem;
-  min-width: 200px;
+  min-width: 100px;
   height: 70px;
   border: 0px;
   position: relative;
   background: #f5df4d;
   white-space: nowrap;
   margin: 0.5rem;
+  padding: 1px 6px;
 }
 
 @media only screen and (max-width: 600px) {
