--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
   font-family: "Micro 5", sans-serif;
   font-weight: 400;
   font-style: normal;
-  /* overflow: hidden; */
+  overflow: hidden;
+  padding: 1rem 0rem;
 }
 
 main {
@@ -17,12 +18,13 @@ main {
 }
 
 .delete-memorial {
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   position: relative;
   width: 100%;
-  padding: 1rem 0rem;
   overflow: hidden;
   gap: 0.7rem;
 }
@@ -82,6 +84,7 @@ p {
   flex-wrap: wrap;
   width: 80%;
   justify-content: center;
+  margin: 0 auto;
 }
 
 @media only screen and (max-width: 600px) {
@@ -114,6 +117,10 @@ p {
 
 .btn_disabled {
   background: #c0c4c8;
+}
+
+.btn_clickable {
+  color: black;
 }
 
 .btn_clickable:hover {
@@ -155,7 +162,7 @@ p {
   background: #939597;
 }
 
-#end-descriotion {
+#end-description {
   position: absolute;
   top: 50%;
   left: 50%;
