--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
   font-weight: 400;
   font-style: normal;
   overflow: hidden;
-  padding: 1rem 0rem;
 }
 
 main {
@@ -18,6 +17,7 @@ main {
 }
 
 .delete-memorial {
+  padding: 1rem 0rem;
   min-height: 80vh;
   display: flex;
   flex-direction: column;
@@ -27,6 +27,12 @@ main {
   width: 100%;
   overflow: hidden;
   gap: 0.7rem;
+}
+
+@media only screen and (max-width: 600px) {
+  .delete-memorial {
+      min-height: 90vh;
+  }
 }
 
 .delete-memorial__title {
@@ -169,3 +175,21 @@ p {
   transform: translate(-50%, -50%);
   display: none;
 }
+
+/* Progress bar */
+#progress-bar-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  z-index: 1000;
+}
+
+#progress-bar {
+  width: 0;
+  height: 100%;
+  background-color: #f5df4d;
+  transition: width 0.2s;
+}
+
