--- a/style.css
+++ b/style.css
@@ -188,10 +188,10 @@ p {
 
 /* Progress bar */
 #progress-bar-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
+  position: absolute;
+  bottom: -10px;
+  left: -0.3rem;
+  width: calc(100% + 2 * 0.3rem);
   height: 5px;
   z-index: 1000;
   background-color: white;
