--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ p {
 #progress-bar {
   width: 0;
   height: 100%;
-  background-color: #f5df4d;
+  background-color: #939597;
   transition: width 0.2s;
 }
 
