--- a/style.css
+++ b/style.css
@@ -58,10 +58,12 @@ h1 {
   position: relative;
 }
 
-p {
+p,
+a {
   margin: 0.2rem 0;
   font-size: 1.7rem;
   text-align: center;
+  color: black;
 }
 
 .delete-memorial__bulldozer {
@@ -134,6 +136,10 @@ p {
   background-color: #d2c800;
 }
 
+.selected {
+  background-color: #d2c800;
+}
+
 .btn_clickable:active {
   top: 5px;
 }
@@ -180,10 +186,21 @@ p {
 
 #end-description {
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: none;
+}
+
+#end-link {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  text-decoration: underline;
+  z-index: 1000;
+  cursor: pointer;
 }
 
 /* Progress bar */
